[package]
name = "chesscomputer"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty-sqlite = "0.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }


[dev-dependencies]
pretty-sqlite = "0.3.0"
# pretty-sqlite