[package]
name = "chesscomputer"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty-sqlite = "0.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4"
# "lz4","zip","gzip"
fast_log = { version = "1.7", features = ["lz4", "zip", "gzip"] }
test-log = "0.2.18"
env_logger = "0.11.8"
chrono = "0.4.41"
datafusion = "49.0.2"
uuid = { version = "1.18.1", features = ["v6", "v7", "v8"] }

[dev-dependencies]
pretty-sqlite = "0.3.0"
# pretty-sqlite


[[bin]]
name = "chesscomputer"
path = "src/main.rs"

[[bin]]
name = "chesscomputer2"
path = "src/main2.rs"
